--- a/configs/face_folder.yaml
+++ b/configs/face_folder.yaml
@@ -10,7 +10,7 @@ log_iter: 10                  # How often do you want to log the training stats
 n_critic: 5
 
 # optimization options
-max_iter: 200000             # maximum number of training iterations
+max_iter: 200000              # maximum number of training iterations
 batch_size: 1                 # batch size
 weight_decay: 0.0001          # weight decay
 beta1: 0.5                    # Adam parameter 一阶矩估计的指数衰减率
@@ -25,9 +25,7 @@ gan_w: 1                      # weight of adversarial loss
 recon_x_w: 10                 # weight of image reconstruction loss
 recon_s_w: 1                  # weight of style reconstruction loss
 recon_c_w: 1                  # weight of content reconstruction loss
-recon_x_cyc_w: 0              # weight of explicit style augmented cycle consistency loss
-vgg_w: 0                      # weight of domain-invariant perceptual loss
-lambda_cls: 1                # weight for domain classification loss
+lambda_cls: 1                 # weight for domain classification loss
 lambda_gp: 10                 # weight for gradient penalty
 lambda_rec: 10                # weight for reconstruction loss
 
@@ -57,4 +55,4 @@ num_workers: 8                              # number of data loading threads
 new_size: 256                               # first resize the shortest image side to this size
 face_crop_size: 256
 face_image_size: 128
-data_root: ./datasets/edges2shoes/     # dataset folder location
+data_root: ./datasets/face_folder/train    # dataset folder location
